# ProjetoPOO

./: .gitignore  CMakeLists.txt  README.md  Trabalho POO - Carros.csv  Trabalho POO - Clientes.csv  Trabalho POO - Vendas.csv  Trabalho POO - Vendedores.csv  clientes.cpp  clientes.csv  clientes.h  descontos.cpp  descontos.h  gerenciadores.cpp  gerenciadores.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  telacadastrocliente.cpp  telacadastrocliente.h  telacadastrocliente.ui  telaconsultaestoque.cpp  telaconsultaestoque.h  telaconsultaestoque.ui  telalistagemvendas.cpp  telalistagemvendas.h  telalistagemvendas.ui  telalogin.cpp  telalogin.h  telalogin.ui  telaprincipal.cpp  telaprincipal.h  telaprincipal.ui  telaresgistrovendas.cpp  telaresgistrovendas.h  telaresgistrovendas.ui  veiculo.cpp  veiculo.h  veiculos.cpp  (+7 more)
